[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cats-vs-raccs"
version = "0.1.2"
description = "Cats vs Raccoons - Turf Defenders"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10,<12",
]

[tool.setuptools]
py-modules = ["main", "game", "settings", "entities", "sprites"]

[tool.setuptools.package-data]
"*" = ["assets/*"]

[tool.nuitka]
standalone = true
enable-plugins = ["tk-inter"]
include-data-dir = ["assets=assets"]
